--- a/_data/social.yml
+++ b/_data/social.yml
@@ -5,5 +5,5 @@
   url: https://github.com/kinza-yousaf
   icon: fab fa-github
 - title: CV
-  url: https://kinza-yousaf.github.io/assets/Resume.pdf
+  url: /assets/resume.pdf
   icon: fas fa-file-alt
